--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==8.1.3
 contourpy==1.0.6
 cycler==0.11.0
 decorator==5.1.1
+et-xmlfile==1.1.0
 executing==1.2.0
 Flask==2.2.2
 fonttools==4.38.0
@@ -17,6 +18,7 @@ MarkupSafe==2.1.1
 matplotlib==3.6.2
 matplotlib-inline==0.1.6
 numpy==1.23.5
+openpyxl==3.0.10
 packaging==21.3
 pandas==1.5.1
 parso==0.8.3
