--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
 # created by virtualenv automatically
 
+/pyvenv.cfg
+/Scripts/activate
+/Scripts/activate.bat
+/Scripts/activate.fish
+/Scripts/activate.nu
+/Scripts/activate.ps1
+/Scripts/activate_this.py
+/Scripts/deactivate.bat
+/Scripts/deactivate.nu
+/Scripts/f2py.exe
+/Scripts/flask.exe
+/Scripts/fonttools.exe
+/Scripts/pip.exe
+/Scripts/pip3.9.exe
+/Scripts/pip3.exe
+/Scripts/pip-3.9.exe
+/Scripts/pydoc.bat
+/Scripts/pyftmerge.exe
+/Scripts/pyftsubset.exe
+/Scripts/python.exe
+/Scripts/pythonw.exe
+/Scripts/ttx.exe
+/Scripts/wheel.exe
+/Scripts/wheel3.9.exe
+/Scripts/wheel3.exe
+/Scripts/wheel-3.9.exe
